--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:esp32-s3]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-lib_deps =
-  adafruit/Adafruit GFX Library@^1.11.9
-  adafruit/Adafruit SSD1306@^2.5.9
-  chris--a/Keypad@^3.1.1
+build_flags = -D BOARD_S3
+
+[env:esp32-c3]
+platform = espressif32
+board = lolin_c3_mini
+framework = arduino
+build_flags = -D BOARD_C3
