Connect to WiFi hotspot and MQTT server

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,11 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 build_flags = -D BOARD_S3
+lib_deps = hmueller01/PubSubClient3 @ ^3.3.0
 
 [env:esp32-c3]
 platform = espressif32
 board = lolin_c3_mini
 framework = arduino
 build_flags = -D BOARD_C3
+lib_deps = hmueller01/PubSubClient3 @ ^3.3.0
